# giradischi

./: README.md  giradischi.desktop  pyproject.toml
giradischi/: __init__.py  __main__.py  main.py
giradischi/backends/: __init__.py  base.py  mido_backend_base.py
giradischi/backends/alsamidi/: __init__.py
giradischi/backends/fluidsynth/: __init__.py  mido_backend.py
giradischi/backends/kdmapi/: __init__.py
giradischi/backends/portmidi/: __init__.py
giradischi/backends/rtmidi/: __init__.py
giradischi/ui/: __init__.py  backend_selector_dialog.ui  backend_settings_dialog.ui  mainwindow.ui
giradischi/utils/: midi_player.py
