[tool.poetry]
name = "giradischi"
version = "1.0.3"
description = "GUI MIDI player supporting multiple backends"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/SebaUbuntu/giradischi"

[tool.poetry.scripts]
giradischi = 'giradischi.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mido = "^1.2.10"
PySide6 = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
