[tool.poetry]
name = "giradischi"
version = "1.1.0"
description = "GUI MIDI player supporting multiple backends"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/SebaUbuntu/giradischi"

[tool.poetry.scripts]
giradischi = 'giradischi.main:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
libmidi = "^1.0.1"
libmidi-io = "^1.0.1"
PySide6 = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
